Fix text overflow in entity links

--- a/client/src/components/entity/style.module.css
+++ b/client/src/components/entity/style.module.css
@@ -2,9 +2,6 @@
   align-items: center;
   display: flex;
   max-width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .entity img {
@@ -18,4 +15,10 @@
 
 .entity img + span {
   margin-left: 0.375rem;
+}
+
+.entity span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
